...
                            ),
                          ),
                        ),
                      Align(
                        alignment: AlignmentDirectional(0.0, 0.0),
                        child: Text(
                          'Create an account',
                          style:
                              FlutterFlowTheme.of(context).titleLarge.override(
                                    font: GoogleFonts.inter(
                                      fontWeight: FontWeight.w600,
                                      fontStyle: FlutterFlowTheme.of(context)
                                          .titleLarge
...
                          child: Column(
                            mainAxisSize: MainAxisSize.max,
                            children: [
                              Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('Signup-Email_mq81'),
                                  controller: _model.signupEmailTextController,
                                  focusNode: _model.signupEmailFocusNode,
                                  onChanged: (_) => EasyDebounce.debounce(
                                    '_model.signupEmailTextController',
                                    Duration(milliseconds: 2000),
                                    () => safeSetState(() {}),
...
                                      .asValidator(context),
                                ),
                              ),
                              Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('Signup-Password_dqmu'),
                                  controller:
                                      _model.signupPasswordTextController,
                                  focusNode: _model.signupPasswordFocusNode,
                                  autofocus: false,
                                  obscureText: !_model.signupPasswordVisibility,
                                  decoration: InputDecoration(
...
                                      .asValidator(context),
                                ),
                              ),
                              Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('Signup-Confirm-Password_vmbj'),
                                  controller: _model
                                      .signupConfirmPasswordTextController,
                                  focusNode:
                                      _model.signupConfirmPasswordFocusNode,
                                  autofocus: false,
                                  obscureText:
...
                              ),
                            ].divide(SizedBox(height: 12.0)),
                          ),
                        ),
                      ),
                      FFButtonWidget(
                        key: ValueKey('Register_Button_15aj'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'SIGNUP_PAGE_PAGE_Register_Button_ON_TAP');
                          logFirebaseEvent('Register_Button_validate_form');
                          if (_model.formKey.currentState == null ||
                              !_model.formKey.currentState!.validate()) {
...
