...
                            ),
                          ),
                        ),
                      Align(
                        alignment: AlignmentDirectional(0.0, 0.0),
                        child: Text(
                          'Login',
                          style:
                              FlutterFlowTheme.of(context).titleLarge.override(
                                    font: GoogleFonts.inter(
                                      fontWeight: FontWeight.w600,
                                      fontStyle: FlutterFlowTheme.of(context)
                                          .titleLarge
...
                          child: Column(
                            mainAxisSize: MainAxisSize.max,
                            children: [
                              Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('Login-Email_ma33'),
                                  controller: _model.loginEmailTextController,
                                  focusNode: _model.loginEmailFocusNode,
                                  onChanged: (_) => EasyDebounce.debounce(
                                    '_model.loginEmailTextController',
                                    Duration(milliseconds: 2000),
                                    () => safeSetState(() {}),
...
                                      .asValidator(context),
                                ),
                              ),
                              Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('Login-Password_oz8o'),
                                  controller:
                                      _model.loginPasswordTextController,
                                  focusNode: _model.loginPasswordFocusNode,
                                  autofocus: false,
                                  obscureText: !_model.loginPasswordVisibility,
                                  decoration: InputDecoration(
...
                              ),
                            ].divide(SizedBox(height: 12.0)),
                          ),
                        ),
                      ),
                      FFButtonWidget(
                        key: ValueKey('Login_Button_e45o'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'LOGIN_PAGE_PAGE_Login_Button_ON_TAP');
                          logFirebaseEvent('Login_Button_auth');
                          GoRouter.of(context).prepareAuthEvent();

...
