...
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: [
                              AuthUserStreamWidget(
                                builder: (context) => Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('Set_Meal_1_pxn6'),
                                    controller: _model.setMeal1TextController,
                                    focusNode: _model.setMeal1FocusNode,
                                    onChanged: (_) => EasyDebounce.debounce(
                                      '_model.setMeal1TextController',
                                      Duration(milliseconds: 2000),
                                      () async {
...
                                ),
                              ),
                              Padding(
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    20.0, 0.0, 20.0, 0.0),
                                child: FFButtonWidget(
                                  key: ValueKey('meal1_button_8eny'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'MEAL_PLAN_PAGE_meal1_button_ON_TAP');
                                    logFirebaseEvent(
                                        'meal1_button_update_page_state');
                                    _model.editMeal1 = !_model.editMeal1;
...
