...
                                      padding: EdgeInsetsDirectional.fromSTEB(
                                          0.0, 46.0, 0.0, 0.0),
                                      child: Column(
                                        mainAxisSize: MainAxisSize.max,
                                        children: [
                                          Text(
                                            'Meal Plan',
                                            style: FlutterFlowTheme.of(context)
                                                .titleLarge
                                                .override(
                                                  font: GoogleFonts.inter(
                                                    fontWeight:
                                                        FlutterFlowTheme.of(
...
                                          Padding(
                                            padding:
                                                EdgeInsetsDirectional.fromSTEB(
                                                    20.0, 14.0, 20.0, 0.0),
                                            child: FFButtonWidget(
                                              key: ValueKey(
                                                  'Go_To_MealPlan_kpxv'),
                                              onPressed: () async {
                                                logFirebaseEvent(
                                                    'HOME_PAGE_PAGE_Go_To_MealPlan_ON_TAP');
                                                logFirebaseEvent(
                                                    'Go_To_MealPlan_google_analytics_event');
                                                logFirebaseEvent(
...
